deploy/clusters/management/projects/network/components/istio-gateway/istio-gateway.gen.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    app.holos.run/cluster.name: management
    app.holos.run/component.name: istio-gateway
    app.holos.run/project.name: network
    app.holos.run/team.name: platform
    argocd.argoproj.io/instance: network-istio-gateway
  name: default
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: Same
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: gateway-cert
      mode: Terminate
